# RetinopathyAI

./: .gitignore  PROJECT_SCOPE.md  README.md  fix.py  fix_patients.py  package-lock.json  package.json  patch_frontend.py
.github/workflows/: backend-ci.yml
backend/: .gitignore  fix_diagnosis.py  fix_frontend.py  pyproject.toml  pytest.ini  requirements-test.txt  ruff.toml  seed_firebase.py  test_firebase_connection.py
backend/app/: main.py
backend/app/api/routes/: auth.py  dashboard.py  patients.py  prescriptions.py  reports.py  scans.py
backend/app/core/: config.py  database.py  firebase.py  security.py
backend/app/models/: patient.py  scan.py  user.py
backend/app/schemas/: patient.py  prescription.py  scan.py  user.py
backend/app/services/: ml_service.py  openai_service.py
backend/app/templates/: report_template.html
backend/app/utils/: pdf_generator.js
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_ml_service.py  test_patients.py  test_scans.py  test_security.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  DiagnosisReportPage.tsx  LoginPage.tsx  PatientDetailPage.tsx  PatientsPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ScanHistoryPage.tsx  ScanUploadPage.tsx  SettingsPage.tsx
frontend/src/styles/: auth.css  dashboard.css  diagnosis-report.css  global.css  (+9 more)
(+1 files in other folders)
