[project]
name = "retinopathy-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.134.0",
    "firebase-admin>=7.2.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "openai>=2.36.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.1",
    "playwright>=1.59.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.47",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "uvicorn[standard]>=0.41.0",
]
